# BeakleVision

./: .gitignore  README.md  lefthook.yml  requirements.txt  taskfile.yml
.github/workflows/: lint-backend.yml  lint.yml  test-backend.yml
backend/: .gitignore  config.dist.yml  gunicorn.conf.py  lefthook.yml  pyproject.toml  requirements-dev.txt  requirements.txt  taskfile.yml
backend-old/src/tba/: enumTypes.py
backend-old/src/types/: __init__.py
backend/docker/: docker-compose.dev.yml  example.env
backend/src/: core.py  main.py  testroute.py
backend/src/db/: __init__.py  db_main.py
backend/src/routes/: index.py  match.py  ping.py  status.py
backend/src/tba/: main.py  types.py
backend/src/tests/: conftest.py  test_cache.py  test_tba.py
backend/src/tests/tba/: test_main.py
backend/src/tests/utils/: test_cache.py
backend/src/types/: __init__.py  enums.py  match.py  tba.py
backend/src/utils/: cache.py  config.py  db.py  handler.py  jsoncache.py  request.py  workers.py
backend/tests/tba/: test_main.py
backend/tests/utils/: test_cache.py
frontend/: pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/ios/Runner/: Info.plist
frontend/lib/: Match.dart  config.dart  counterwidget.dart  fullcounterwidget.dart  main.dart  mainpage.dart  misswidget.dart  titlewidget.dart  togglebutton.dart
frontend/lib/logic/: sendtobackend.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/web/: index.html
frontend/windows/runner/: main.cpp
server/: lefthook.yml  pyproject.toml  requirements.txt
(+6 files in other folders)
